--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <meta charset="UTF-8">
   <title>Page Title</title>
+  <link rel="stylesheet" href="./css/style.css"/>
+  <script defer src="./js/app.js"></script>
 
   <body>
 
