Trying to get this to work

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <script defer src="./js/app.js"></script>
 
   <body>
-
-    <p>Hello World!</p>
-
+    <div class="test"></div>
   </body>
 
 </html>
