--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css"/>
-  <script src="./js/svg.js"></script>
+  <!-- <script src="./js/svg.js"></script> -->
   <title>Document</title>
 </head>
 
 <body>
-  <!-- <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
-  <script src="./js/app.js"></script> -->
+  <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
+  <script src="./js/app.js"></script>
 
 </body>
 </html>
