--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
+  <script src="./node_modules/tweedle.js/dist/tweedle.umd.min.js"></script>
   <script src="./js/app.js"></script>
 
 </body>
