Added Start of Ready Set Go button

--- a/navigation.html
+++ b/navigation.html
@@ -30,7 +30,11 @@
             Click<span class="bold-txt"> the circles </span>to jump to a specific part of the course!
           </p>
         </div>
-        <div class="start-course"></div>
+        <div class="start-course">
+          <h1 class="ready-set-go">READY...</h1>
+          <h1 class="ready-set-go">SET...</h1>
+          <h1 class="ready-set-go" id="go-button">GO!</h1>
+        </div>
       </nav>
 
       <div id="map-view">
