Added new textured asset

--- a/navigation.html
+++ b/navigation.html
@@ -39,7 +39,7 @@
 
       <div id="map-view">
         <!-- Sweepstakes Logo Source: https://cmubuggy.org/history/sweepstakes -->
-        <img src="./assets/pui buggy course.svg"
+        <img src="./assets/pui buggy course textured.svg.svg"
           alt="Simplified Diagram of Buggy Racecourse"
           id="course-img">
       </div>
