--- a/buggy.html
+++ b/buggy.html
@@ -6,14 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css"/>
-  <!-- <script src="./js/svg.js"></script> -->
+  <script type="module" src="./js/buggy.js"></script>
   <title>Document</title>
 </head>
 
 <body>
-  <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
+  <!-- <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
   <script src="./node_modules/tweedle.js/dist/tweedle.umd.min.js"></script>
-  <script src="./js/app.js"></script>
+  <script src="./js/app.js"></script> -->
+  <div class="test"></div>
 
 </body>
 </html>
