changed background color

--- a/buggy.html
+++ b/buggy.html
@@ -11,7 +11,7 @@
   <title>Document</title>
 </head>
 
-<body>
+<body id="buggy-course">
   <!-- <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
   <script src="./node_modules/tweedle.js/dist/tweedle.umd.min.js"></script>
   <script src="./js/app.js"></script> -->
