--- a/buggy.html
+++ b/buggy.html
@@ -15,7 +15,7 @@
   <!-- <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
   <script src="./node_modules/tweedle.js/dist/tweedle.umd.min.js"></script>
   <script src="./js/app.js"></script> -->
-  <div class="test"></div>
+  <div class="buggy-road"></div>
 
 </body>
 </html>
