--- a/buggy.html
+++ b/buggy.html
@@ -6,15 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css"/>
+  <!-- Linking to SVG.js Library -->
   <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
   <script type="module" src="./js/buggy.js"></script>
   <title>Document</title>
 </head>
 
 <body id="buggy-course">
-  <!-- <script src="./node_modules/pixi.js/dist/pixi.min.js"></script>
-  <script src="./node_modules/tweedle.js/dist/tweedle.umd.min.js"></script>
-  <script src="./js/app.js"></script> -->
+  <!-- <div class="display-content"></div> -->
   <div class="buggy-road"></div>
 
 </body>
