--- a/buggy.html
+++ b/buggy.html
@@ -13,8 +13,21 @@
 </head>
 
 <body id="buggy-course">
-  <!-- <div class="display-content"></div> -->
-  <div class="buggy-road"></div>
+  <header>
+    <img src="./assets/sweepstakes_logo_notext_white.svg"
+      alt="Buggy Sweepstakes Logo: a top-view of a buggy with elements of Carnegie Mellon's Thistle logo incorporated"
+      id="sweepstakes-logo-header">
 
+    <div class="position-animation"></div>
+    <div class="location-txt">
+      <h3>
+        Front Hills
+      </h3>
+    </div>
+  </header>
+
+  <div class="display-content"></div>
+
+  <div class="buggy-road"></div>
 </body>
 </html>
