--- a/buggy.html
+++ b/buggy.html
@@ -26,7 +26,11 @@
     </div>
   </header>
 
-  <div class="display-content"></div>
+  <div class="display-content">
+    <div id="front-hills">
+      <p>What is buggy?</p>
+    </div>
+  </div>
 
   <div class="buggy-road"></div>
 </body>
