Starting Adding Divs for Various Course Sections

--- a/buggy.html
+++ b/buggy.html
@@ -28,7 +28,52 @@
 
   <div class="display-content">
     <div id="front-hills">
-      <p>What is buggy?</p>
+      <p class="section-title" id="front-hill-title">
+        Front Hills
+      </p>
+      <p class="section-subtitle">
+        So What is this Buggy Thing Anyway?
+      </p>
+    </div>
+    <div id="free-roll">
+      <p class="section-title" id="free-roll-title">
+        Free Roll
+      </p>
+      <p class="section-subtitle">
+        A Sample of Historically Notable Buggies
+      </p>
+    </div>
+    <div id="schenley">
+      <p class="section-title" id="schenley-title">
+        Schenley Dr.
+      </p>
+      <p class="section-subtitle">
+        Currently Active Buggy Teams
+      </p>
+    </div>
+    <div id="chute">
+      <p class="section-title" id="chute-title">
+        The Chute
+      </p>
+      <p class="section-subtitle">
+        Notable Records in Buggy History
+      </p>
+    </div>
+    <div id="chute">
+      <p class="section-title" id="chute-title">
+        The Chute
+      </p>
+      <p class="section-subtitle">
+        Notable Records in Buggy History
+      </p>
+    </div>
+    <div id="back-hills">
+      <p class="section-title" id="back-hills-title">
+        Back Hills
+      </p>
+      <p class="section-subtitle">
+        Leaderboard for Raceday 2023
+      </p>
     </div>
   </div>
 
