--- a/buggy.html
+++ b/buggy.html
@@ -27,7 +27,7 @@
   </header>
 
   <div class="display-content">
-    <div id="front-hills">
+    <div class="begin-section" id="front-hills">
       <p class="section-title" id="front-hill-title">
         Front Hills
       </p>
@@ -35,7 +35,23 @@
         So What is this Buggy Thing Anyway?
       </p>
     </div>
-    <div id="free-roll">
+
+    <div class="info-template">
+      <div class="info-content">
+        <p class="info-title"></p>
+        <img src="./assets/spirit-2018-hill1.JPG>"
+        class="info-img">
+        <p class="info-txt"></p>
+      </div>
+
+      <video controls id="front-hill-seraph">
+        <!-- Source: https://cmubuggy.smugmug.com/2022-2023/Raceday-Finals-April-15/i-Mmmzg7r/A
+        Credit: Buggy Alumni Association -->
+        <source src="./assets/seraph-raceday2023-video.mp4" type="video/mp4">
+      </video>
+    </div>
+
+    <div class="begin-section" id="free-roll">
       <p class="section-title" id="free-roll-title">
         Free Roll
       </p>
@@ -43,7 +59,8 @@
         A Sample of Historically Notable Buggies
       </p>
     </div>
-    <div id="schenley">
+
+    <div class="begin-section" id="schenley">
       <p class="section-title" id="schenley-title">
         Schenley Dr.
       </p>
@@ -51,7 +68,8 @@
         Currently Active Buggy Teams
       </p>
     </div>
-    <div id="chute">
+
+    <div class="begin-section" id="chute">
       <p class="section-title" id="chute-title">
         The Chute
       </p>
@@ -59,7 +77,8 @@
         Notable Records in Buggy History
       </p>
     </div>
-    <div id="chute">
+
+    <div class="begin-section" id="chute">
       <p class="section-title" id="chute-title">
         The Chute
       </p>
@@ -67,7 +86,8 @@
         Notable Records in Buggy History
       </p>
     </div>
-    <div id="back-hills">
+
+    <div class="begin-section" id="back-hills">
       <p class="section-title" id="back-hills-title">
         Back Hills
       </p>
