Added Some Sample Content

--- a/buggy.html
+++ b/buggy.html
@@ -26,6 +26,7 @@
     </div>
   </header>
 
+  <!-- Text and Stats are sourced from the Buggy Alumni Association (cmubuggy.org) unless otherwise noted -->
   <div class="display-content">
     <div class="begin-section" id="front-hills">
       <p class="section-title" id="front-hill-title">
@@ -38,10 +39,14 @@
 
     <div class="info-template">
       <div class="info-content">
-        <p class="info-title"></p>
-        <img src="./assets/spirit-2018-hill1.JPG>"
+        <p class="info-title">
+          Buggy: An Explanation
+        </p>
+        <img src="./assets/spirit-2018-hill1.JPG"
         class="info-img">
-        <p class="info-txt"></p>
+        <p class="info-txt">
+          Buggy (also called Sweepstakes) is a race held annually since 1920 at Carnegie Mellon. Teams of five athletes (the pushers) push an un-motorized vehicle (a buggy) containing a driver around a 0.84 mile course in a relay format where the vehicle serves as the baton. Roughly half of the course is uphill, during which the pushers run and shove the buggy uphill. During the other – downhill – half, drivers are on their own to navigate tight turns at speeds of up to 35mph.
+        </p>
       </div>
 
       <video controls id="front-hill-seraph">
@@ -66,15 +71,6 @@
       </p>
       <p class="section-subtitle">
         Currently Active Buggy Teams
-      </p>
-    </div>
-
-    <div class="begin-section" id="chute">
-      <p class="section-title" id="chute-title">
-        The Chute
-      </p>
-      <p class="section-subtitle">
-        Notable Records in Buggy History
       </p>
     </div>
 
