--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css"/>
+    <!-- Linking to JQuery API -->
+    <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Linking to SVG.js Library -->
+    <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
     <script src="./js/navigation.js"></script>
     <title>Buggy Information Website</title>
   </head>
@@ -12,6 +16,7 @@
   <body>
     <div id="navigation-page">
       <nav class="vertical-navigation-bar">
+        <!-- Sweepstakes Logo Source: https://cmubuggy.org/history/sweepstakes -->
         <img src="./assets/sweepstakes_logo_notext.svg"
           alt="Buggy Sweepstakes Logo: a top-view of a buggy with elements of Carnegie Mellon's Thistle logo incorporated"
           id="sweepstakes-logo">
@@ -33,15 +38,31 @@
         <div class="start-course">
           <h1 class="ready-set-go">READY...</h1>
           <h1 class="ready-set-go">SET...</h1>
-          <h1 class="ready-set-go" id="go-button">GO!</h1>
+          <a href="./index.html" class="button">
+            <h1 class="ready-set-go" id="go-button">GO!</h1>
+          </a>
         </div>
       </nav>
 
       <div id="map-view">
-        <!-- Sweepstakes Logo Source: https://cmubuggy.org/history/sweepstakes -->
-        <img src="./assets/pui buggy course.svg"
-          alt="Simplified Diagram of Buggy Racecourse"
-          id="course-img">
+        <div id="map-with-checkpoints">
+          <img src="./assets/pui buggy course.svg"
+            alt="Simplified Diagram of Buggy Racecourse"
+            id="course-img">
+          
+          <a href="./buggy.html#schenley">
+            <div class="checkpoint-marker" id="marker-one">
+              <p class="marker-txt">1</p>
+            </div>
+          </a>
+
+          <!-- Create template for Navigation Overlay when hovering over Checkpoint Markers -->
+          <div class="map-overlay">
+            <p class="map-hover-title">Course Section</p>
+
+            <p class="map-hover-txt">Lorem ipsum</p>
+          </div>
+        </div>
       </div>
     </div>
     
