Created Hover Template and Starting to code

--- a/index.html
+++ b/index.html
@@ -52,16 +52,42 @@
           
           <a href="./buggy.html#schenley">
             <div class="checkpoint-marker" id="marker-one">
-              <p class="marker-txt">1</p>
+              <p class="marker-txt">1.</p>
+            </div>
+          </a>
+
+          <a href="./buggy.html#schenley">
+            <div class="checkpoint-marker" id="marker-two">
+              <p class="marker-txt">2.</p>
+            </div>
+          </a>
+
+          <a href="./buggy.html#schenley">
+            <div class="checkpoint-marker" id="marker-three">
+              <p class="marker-txt">3.</p>
+            </div>
+          </a>
+
+          <a href="./buggy.html#schenley">
+            <div class="checkpoint-marker" id="marker-four">
+              <p class="marker-txt">4.</p>
+            </div>
+          </a>
+
+          <a href="./buggy.html#schenley">
+            <div class="checkpoint-marker" id="marker-five">
+              <p class="marker-txt">5.</p>
             </div>
           </a>
 
           <!-- Create template for Navigation Overlay when hovering over Checkpoint Markers -->
-          <div class="map-overlay">
-            <p class="map-hover-title">Course Section</p>
+          <template class="nav-overlay">
+            <div class="map-overlay">
+              <p class="map-hover-title">Course Section</p>
 
-            <p class="map-hover-txt">Lorem ipsum</p>
-          </div>
+              <p class="map-hover-txt">Lorem ipsum</p>
+            </div>
+          </template>
         </div>
       </div>
     </div>
