--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
           </a>
 
-          <a href="./buggy.html#schenley">
+          <!-- <a href="./buggy.html#schenley">
             <div class="checkpoint-marker" id="marker-two">
               <p class="marker-txt">2.</p>
             </div>
@@ -77,7 +77,7 @@
           <a href="./buggy.html#schenley">
             <div class="checkpoint-marker" id="marker-five">
               <p class="marker-txt">5.</p>
-            </div>
+            </div> -->
           </a>
 
           <!-- Create template for Navigation Overlay when hovering over Checkpoint Markers -->
