--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
 
           <p class="info-txt">
-            Click<span class="bold-txt"> the circles </span>to jump to a specific part of the course!
+            Or click<span class="bold-txt"> the circles </span>to jump to a specific part of the course!
           </p>
         </div>
         <div class="start-course">
@@ -56,7 +56,7 @@
             </div>
           </a>
 
-          <!-- <a href="./buggy.html#schenley">
+          <a href="./buggy.html#schenley">
             <div class="checkpoint-marker" id="marker-two">
               <p class="marker-txt">2.</p>
             </div>
@@ -77,7 +77,7 @@
           <a href="./buggy.html#schenley">
             <div class="checkpoint-marker" id="marker-five">
               <p class="marker-txt">5.</p>
-            </div> -->
+            </div>
           </a>
 
           <!-- Create template for Navigation Overlay when hovering over Checkpoint Markers -->
