updated checkpoint marker links

--- a/buggy.html
+++ b/buggy.html
@@ -87,7 +87,7 @@
       </p>
     </div>
 
-    <div class="begin-section" id="backhills">
+    <div class="begin-section" id="back-hills">
       <p class="section-title" id="back-hills-title">
         Back Hills
       </p>
