--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             alt="Simplified Diagram of Buggy Racecourse"
             id="course-img">
           
-          <a href="./buggy.html#schenley">
+          <a href="./buggy.html#front-hills">
             <div class="checkpoint-marker" id="marker-one">
               <p class="marker-txt">1.</p>
             </div>
           </a>
 
-          <a href="./buggy.html#schenley">
+          <a href="./buggy.html#free-roll">
             <div class="checkpoint-marker" id="marker-two">
               <p class="marker-txt">2.</p>
             </div>
@@ -68,13 +68,13 @@
             </div>
           </a>
 
-          <a href="./buggy.html#schenley">
+          <a href="./buggy.html#chute">
             <div class="checkpoint-marker" id="marker-four">
               <p class="marker-txt">4.</p>
             </div>
           </a>
 
-          <a href="./buggy.html#schenley">
+          <a href="./buggy.html#back-hills">
             <div class="checkpoint-marker" id="marker-five">
               <p class="marker-txt">5.</p>
             </div>
