Positioned Overlay templates

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
           </a>
 
           <!-- Create template for Navigation Overlay when hovering over Checkpoint Markers -->
-          <template class="nav-overlay">
+          <!-- <template class="nav-overlay"> -->
             <div class="map-overlay">
               <p class="map-hover-title">Course Section</p>
 
               <p class="map-hover-txt">Lorem ipsum</p>
             </div>
-          </template>
+          <!-- </template> -->
         </div>
       </div>
     </div>
