Working on finishing implementing hover code

--- a/index.html
+++ b/index.html
@@ -80,14 +80,37 @@
             </div>
           </a>
 
-          <!-- Create template for Navigation Overlay when hovering over Checkpoint Markers -->
-          <!-- <template class="nav-overlay"> -->
-            <div class="map-overlay">
+          <!-- Create  Overlay when hovering over Checkpoint Markers -->
+            <div class="map-overlay" id="front-hill-ol">
+              <p class="map-hover-title">"Front Hills"</p>
+
+              <p class="map-hover-txt">Click to learn about Buggy and the Race</p>
+            </div>
+
+            <!-- <div class="map-overlay" id="free-roll-ol">
               <p class="map-hover-title">Course Section</p>
 
               <p class="map-hover-txt">Lorem ipsum</p>
             </div>
-          <!-- </template> -->
+
+            <div class="map-overlay" id="schenley-ol">
+              <p class="map-hover-title">Course Section</p>
+
+              <p class="map-hover-txt">Lorem ipsum</p>
+            </div>
+
+            <div class="map-overlay" id="chute-ol">
+              <p class="map-hover-title">Course Section</p>
+
+              <p class="map-hover-txt">Lorem ipsum</p>
+            </div>
+
+            <div class="map-overlay" id="back-hill-ol">
+              <p class="map-hover-title">Course Section</p>
+
+              <p class="map-hover-txt">Lorem ipsum</p>
+            </div> -->
+
         </div>
       </div>
     </div>
