Implemented Navigation Hover Code

--- a/index.html
+++ b/index.html
@@ -87,29 +87,29 @@
               <p class="map-hover-txt">Click to learn about Buggy and the Race</p>
             </div>
 
-            <!-- <div class="map-overlay" id="free-roll-ol">
-              <p class="map-hover-title">Course Section</p>
+            <div class="map-overlay" id="free-roll-ol">
+              <p class="map-hover-title">"Free Roll"</p>
 
-              <p class="map-hover-txt">Lorem ipsum</p>
+              <p class="map-hover-txt">Click to see Notable Buggies</p>
             </div>
 
             <div class="map-overlay" id="schenley-ol">
-              <p class="map-hover-title">Course Section</p>
+              <p class="map-hover-title">"Schenley"</p>
 
-              <p class="map-hover-txt">Lorem ipsum</p>
+              <p class="map-hover-txt">Click to learn about the various teams</p>
             </div>
 
             <div class="map-overlay" id="chute-ol">
-              <p class="map-hover-title">Course Section</p>
+              <p class="map-hover-title">"The Chute"</p>
 
-              <p class="map-hover-txt">Lorem ipsum</p>
+              <p class="map-hover-txt">Click to learn about Buggy Speed Records</p>
             </div>
 
             <div class="map-overlay" id="back-hill-ol">
-              <p class="map-hover-title">Course Section</p>
+              <p class="map-hover-title">"Back Hills"</p>
 
-              <p class="map-hover-txt">Lorem ipsum</p>
-            </div> -->
+              <p class="map-hover-txt">Click to see Buggy Leaderboard</p>
+            </div>
 
         </div>
       </div>
