Updated Go button link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="start-course">
           <h1 class="ready-set-go">READY...</h1>
           <h1 class="ready-set-go">SET...</h1>
-          <a href="./index.html" class="button">
+          <a href="./buggy.html" class="button">
             <h1 class="ready-set-go" id="go-button">GO!</h1>
           </a>
         </div>
