Trying to Debug Progress Tracker Code

--- a/buggy.html
+++ b/buggy.html
@@ -12,7 +12,7 @@
   <!-- Linking to JQuery Advanced Progress Tracker Plug-in. Source: https://github.com/Manostion/Advanced-jQuery-scroll-progress-tracker  -->
   <link href="css/advanced-progress-tracker.min.css" rel="stylesheet" />
   <script src="advanced-progress-tracker.js"></script>
-  
+
   <!-- Linking to SVG.js Library -->
   <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
   <script type="module" src="./js/buggy.js"></script>
@@ -37,7 +37,7 @@
 
   <!-- Text and Stats are sourced from the Buggy Alumni Association (cmubuggy.org) unless otherwise stated -->
   <div class="display-content">
-    <div class="begin-section" id="front-hills">
+    <div class="begin-section" class="trackThis" id="front-hills">
       <p class="section-title" id="front-hill-title">
         Front Hills
       </p>
@@ -65,7 +65,7 @@
       </video>
     </div>
 
-    <div class="begin-section" id="free-roll">
+    <div class="begin-section" class="trackThis" id="free-roll">
       <p class="section-title" id="free-roll-title">
         Free Roll
       </p>
@@ -74,7 +74,7 @@
       </p>
     </div>
 
-    <div class="begin-section" id="schenley">
+    <div class="begin-section" class="trackThis" id="schenley">
       <p class="section-title" id="schenley-title">
         Schenley Dr.
       </p>
@@ -83,7 +83,7 @@
       </p>
     </div>
 
-    <div class="begin-section" id="chute">
+    <div class="begin-section" class="trackThis" id="chute">
       <p class="section-title" id="chute-title">
         The Chute
       </p>
@@ -92,7 +92,7 @@
       </p>
     </div>
 
-    <div class="begin-section" id="back-hills">
+    <div class="begin-section" class="trackThis" id="back-hills">
       <p class="section-title" id="back-hills-title">
         Back Hills
       </p>
