Fixed Buggy Overlay in Main Page

--- a/buggy.html
+++ b/buggy.html
@@ -103,9 +103,11 @@
   </div>
 
   <div class="buggy-road">
-    <img src="./assets/black-buggy.png"
-      alt="Black silhouette of a buggy, a long aerodynamic vehicle with wheels and a long handle in the back"
-      id="buggy-ol">
+    <div id="store-buggy-sprite">
+      <img src="./assets/black-buggy.png"
+        alt="Black silhouette of a buggy, a long aerodynamic vehicle with wheels and a long handle in the back"
+        id="buggy-ol">
+    </div>
 
     <div id="road"></div>
   </div>
