Actually fixed Buggy Overlay

--- a/buggy.html
+++ b/buggy.html
@@ -104,7 +104,7 @@
 
   <div class="buggy-road">
     <div id="store-buggy-sprite">
-      <img src="./assets/black-buggy.png"
+      <img src="./assets/black-buggy-cropped.png"
         alt="Black silhouette of a buggy, a long aerodynamic vehicle with wheels and a long handle in the back"
         id="buggy-ol">
     </div>
