To do item added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           id="info-icon">
 
         <div id="navigation-info">
+          <!-- To Do: Add Ability to Start Website Using Enter Button for Accessibility Reasons -->
           <p class="info-txt">
             Click<span class="bold-txt"> Go </span> to start from the beginning!
           </p>
