Enter button interaction working

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="navigation-info">
           <!-- To Do: Add Ability to Start Website Using Enter Button for Accessibility Reasons -->
           <p class="info-txt">
-            Click<span class="bold-txt"> Go </span> to start from the beginning!
+            Click<span class="bold-txt"> Go </span>  or press <span class="bold-txt"> Enter </span>to start from the beginning!
           </p>
 
           <p class="info-txt">
