--- a/buggy.html
+++ b/buggy.html
@@ -15,6 +15,7 @@
 
   <!-- Linking to SVG.js Library -->
   <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
+  <script type="module" src="./js/navigation.js"></script>
   <script type="module" src="./js/buggy.js"></script>
   <title>Document</title>
 </head>
