--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           id="info-icon">
 
         <div id="navigation-info">
-          <!-- To Do: Add Ability to Start Website Using Enter Button for Accessibility Reasons -->
           <p class="info-txt">
             Click<span class="bold-txt"> Go </span>  or press <span class="bold-txt"> Enter </span>to start from the beginning!
           </p>
@@ -57,11 +56,11 @@
             </div>
           </a>
 
-          <a href="./buggy.html#free-roll">
+          <!-- <a href="./buggy.html#free-roll"> -->
             <div class="checkpoint-marker" id="marker-two">
               <p class="marker-txt">2</p>
             </div>
-          </a>
+          <!-- </a> -->
 
           <a href="./buggy.html#schenley">
             <div class="checkpoint-marker" id="marker-three">
