Created buggy html copy while fixing buggy

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             </div>
           </a>
 
-          <!-- <a href="./buggy.html#free-roll"> -->
+          <a href="./buggy.html#free-roll">
             <div class="checkpoint-marker" id="marker-two">
               <p class="marker-txt">2</p>
             </div>
-          <!-- </a> -->
+          </a>
 
           <a href="./buggy.html#schenley">
             <div class="checkpoint-marker" id="marker-three">
