Adding in some buggy img content

--- a/buggy.html
+++ b/buggy.html
@@ -39,7 +39,7 @@
 
     <!-- Text and Stats are sourced from the Buggy Alumni Association (cmubuggy.org) unless otherwise stated -->
     <div class="display-content">
-      <div class="begin-section" class="trackThis" id="front-hills">
+      <div class="begin-section" id="front-hills">
         <p class="section-title" id="front-hill-title">
           Front Hills
         </p>
@@ -48,30 +48,7 @@
         </p>
       </div>
 
-      <div class="info-template">
-        <div class="info-content">
-          <p class="info-title">
-            Buggy: An Explanation
-          </p>
-          <img src="./assets/spirit-2018-hill1.JPG"
-          class="info-img"
-          alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him.">
-          <p class="info-txt">
-            Buggy (also called Sweepstakes) is a race held annually since 1920 at Carnegie Mellon. Teams of five athletes (the pushers) push an un-motorized vehicle (a buggy) containing a driver around a 0.84 mile course in a relay format where the vehicle serves as the baton. Roughly half of the course is uphill, during which the pushers run and shove the buggy uphill. During the other – downhill – half, drivers are on their own to navigate tight turns at speeds of up to 35mph.
-          </p>
-        </div>
-
-        <!-- Raceday 2022: SPIRIT A and CIA D Raceday Video. Source: https://www.youtube.com/watch?v=KUYhK4IDVVg from CMUBuggy -->
-        <iframe width="560" height="315" 
-          src="https://www.youtube.com/embed/KUYhK4IDVVg" 
-          title="YouTube video player" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-          allowfullscreen>
-        </iframe>
-      </div>
-
-      <div class="begin-section" class="trackThis" id="free-roll">
+      <div class="begin-section" id="free-roll">
         <p class="section-title" id="free-roll-title">
           Free Roll
         </p>
@@ -80,7 +57,19 @@
         </p>
       </div>
 
-      <div class="begin-section" class="trackThis" id="schenley">
+      <div class="info-content">
+        <div class="img-and-caption">
+          <!-- Alt Text Sourced from Buggy Alumni Association -->
+          <img src="./assets/notable-buggies/quantum-leap.jpg"
+            alt="2014 - Spirit's Quantum Leap on Display at Design Comp. Behind, from left to right, are SDC's Rage (red), Avarice (orange), Vice (yellow), Bane (purple), Psychosis (gray), and Malice (black). Credit: Ben Matzke"
+            class="featured-buggies">
+          <p class="buggy-img-caption">Quantum Leap</p>
+          <p class="buggy-img-caption">Team: SPIRIT Racing Systems</p>
+          <p class="buggy-img-caption">Notable for holding a 20 year course record</p>
+        </div>  
+      </div>
+
+      <div class="begin-section" id="schenley">
         <p class="section-title" id="schenley-title">
           Schenley Dr.
         </p>
@@ -89,7 +78,7 @@
         </p>
       </div>
 
-      <div class="begin-section" class="trackThis" id="chute">
+      <div class="begin-section" id="chute">
         <p class="section-title" id="chute-title">
           The Chute
         </p>
@@ -98,7 +87,7 @@
         </p>
       </div>
 
-      <div class="begin-section" class="trackThis" id="back-hills">
+      <div class="begin-section" id="back-hills">
         <p class="section-title" id="back-hills-title">
           Back Hills
         </p>
