Added content to the Free Roll Section

--- a/buggy.html
+++ b/buggy.html
@@ -53,20 +53,66 @@
           Free Roll
         </p>
         <p class="section-subtitle">
-          A Sample of Historically Notable Buggies
+          A Selection of Historically Notable Buggies
         </p>
       </div>
 
       <div class="info-content">
         <div class="img-and-caption">
-          <!-- Alt Text Sourced from Buggy Alumni Association -->
-          <img src="./assets/notable-buggies/quantum-leap.jpg"
-            alt="2014 - Spirit's Quantum Leap on Display at Design Comp. Behind, from left to right, are SDC's Rage (red), Avarice (orange), Vice (yellow), Bane (purple), Psychosis (gray), and Malice (black). Credit: Ben Matzke"
+          <!-- Image Credit: CMU Archives -->
+          <img src="./assets/notable-buggies/old-buggies.jpg"
+            alt="Line of numbered buggies with a crowd of people behind them. Buggy closest to front is numbered '1' and features a chariot-like design. Behind it is number 2, then number 8, number 12, and number 3. The old buggies feature four wheels and an open carriage. Image is in black and white."
             class="featured-buggies">
-          <p class="buggy-img-caption">Quantum Leap</p>
+          <p class="buggy-name">Numbered Buggies</p>
+          <p class="buggy-img-caption">Built: Unknown (Image From 1920)</p>
+          <p class="buggy-img-caption">Team: Various Fraternities</p>
+          <p class="buggy-img-caption">One of the earliest buggy races to be photographed.</p>
+        </div>
+
+        <div class="img-and-caption">
+          <!-- Image Credit: Tom Wood -->
+          <img src="./assets/notable-buggies/bathtub-buggy.jpg"
+            alt="Man in white shirt running while pushing a bathtub with four large wheels attached. The bathtub is painted with two horizontal red stripes, and a central symbol with a white star inscribed inside a blue circle which is inside a larger red circle. Inside the bathtub is a man wearing a helmet cheering and waving."
+            class="featured-buggies">
+          <p class="buggy-name">Herpole Hode</p>
+          <p class="buggy-img-caption">Built: 1971</p>
+          <p class="buggy-img-caption">Team: LSH</p>
+          <p class="buggy-img-caption">A.K.A Bathtub Buggy</p>
+        </div> 
+
+        <div class="img-and-caption">
+          <!-- Image Credit: Ben Matzke -->
+          <img src="./assets/notable-buggies/quantum-leap.jpg"
+            alt="Black Buggy with Gold Windshield elevated slightly off of a brown floor. A set of 6 other buggies arranged linearly can be seen behind it."
+            class="featured-buggies">
+          <p class="buggy-name">Quantum Leap</p>
+          <p class="buggy-img-caption">Built: 1987</p>
           <p class="buggy-img-caption">Team: SPIRIT Racing Systems</p>
           <p class="buggy-img-caption">Notable for holding a 20 year course record</p>
-        </div>  
+        </div> 
+        
+        <div class="img-and-caption">
+          <!-- Image Credit: Shafeeq Sinnamohideen -->
+          <img src="./assets/notable-buggies/insite.jpg"
+            alt="Man pushing an orange and blue buggy on the road"
+            class="featured-buggies">
+          <p class="buggy-name">Insite</p>
+          <p class="buggy-img-caption">Built: 2003</p>
+          <p class="buggy-img-caption">Team: Fringe/DG</p>
+          <p class="buggy-img-caption">Originally built by the Fringe Buggy Team. Sold in 2022 to DG (Delta Gamma Sorority).</p>
+        </div>
+        
+        <div class="img-and-caption">
+          <!-- Image Credit: Guillermo Gomez -->
+          <img src="./assets/notable-buggies/short-circuit.jpg"
+            alt="Small lilac colored buggy without a windshield on an asphalt road. A row of hay bales are behind it a few feet away."
+            class="featured-buggies">
+          <p class="buggy-name">Short Circuit</p>
+          <p class="buggy-img-caption">Built: 2023</p>
+          <p class="buggy-img-caption">Team: Robobuggy</p>
+          <p class="buggy-img-caption">Autonomous Self-Driving Buggy.</p>
+          <p class="buggy-img-caption-italics">(Note: Autonomous Buggies cannot compete in normal races.)</p>
+        </div>
       </div>
 
       <div class="begin-section" id="schenley">
