Added comments to reduce clutter in html +Logo svg

--- a/buggy.html
+++ b/buggy.html
@@ -128,6 +128,8 @@
         </p>
       </div>
 
+      <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
+      <!-- Chute Section: Notable Records -->
       <div class="begin-section" id="chute">
         <p class="section-title" id="chute-title">
           The Chute
@@ -137,6 +139,8 @@
         </p>
       </div>
 
+      <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
+      <!-- Back Hills: Leaderboard -->
       <div class="begin-section" id="back-hills">
         <p class="section-title" id="back-hills-title">
           Back Hills
@@ -147,6 +151,8 @@
       </div>
     </div>
 
+    <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
+    <!-- Buggy Overlay on Bottom of the Screen -->
     <div class="buggy-road">
       <div id="store-buggy-sprite">
         <img src="./assets/black-buggy-cropped.png"
