--- a/buggy.html
+++ b/buggy.html
@@ -128,6 +128,19 @@
         </p>
       </div>
 
+      <div class="info-content">
+        <div class="img-and-caption">
+          <img src="./assets/team logos/apex.svg"
+            alt="Man in white shirt running while pushing a bathtub with four large wheels attached. The bathtub is painted with two horizontal red stripes, and a central symbol with a white star inscribed inside a blue circle which is inside a larger red circle. Inside the bathtub is a man wearing a helmet cheering and waving."
+            class="team-logo">
+          <p class="img-name">Herpole Hode</p>
+          <p class="img-caption">Built: 1971</p>
+          <p class="img-caption">Team: LSH</p>
+          <p class="img-caption">A.K.A Bathtub Buggy</p>
+        </div> 
+
+      </div>
+
       <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
       <!-- Chute Section: Notable Records -->
       <div class="begin-section" id="chute">
