Created logo and button styles for teams

--- a/buggy.html
+++ b/buggy.html
@@ -133,10 +133,11 @@
           <img src="./assets/team logos/apex.svg"
             alt="Man in white shirt running while pushing a bathtub with four large wheels attached. The bathtub is painted with two horizontal red stripes, and a central symbol with a white star inscribed inside a blue circle which is inside a larger red circle. Inside the bathtub is a man wearing a helmet cheering and waving."
             class="team-logo">
-          <p class="img-name">Herpole Hode</p>
-          <p class="img-caption">Built: 1971</p>
-          <p class="img-caption">Team: LSH</p>
-          <p class="img-caption">A.K.A Bathtub Buggy</p>
+          <p class="team-name">Apex Buggy</p>
+          <p class="img-caption">Founded: 2011</p>
+          <a href="https://tartanconnect.cmu.edu/apex/home/">
+            <button class="visit-team">Visit Their Website!</button>
+          </a>
         </div> 
 
       </div>
