--- a/buggy.html
+++ b/buggy.html
@@ -129,9 +129,10 @@
       </div>
 
       <div class="info-content">
+        <!-- Apex Buggy -->
         <div class="img-and-caption">
           <img src="./assets/team logos/apex.svg"
-            alt="Man in white shirt running while pushing a bathtub with four large wheels attached. The bathtub is painted with two horizontal red stripes, and a central symbol with a white star inscribed inside a blue circle which is inside a larger red circle. Inside the bathtub is a man wearing a helmet cheering and waving."
+            alt="The word 'Apex' in a large red stencil font. The A is larger than the other letters and turns into an abstract, curvy, wing-like design"
             class="team-logo">
           <p class="team-name">Apex Buggy</p>
           <p class="img-caption">Founded: 2011</p>
@@ -139,6 +140,12 @@
             <button class="visit-team">Visit Their Website!</button>
           </a>
         </div> 
+
+        <!-- Image from https://givingcmuday.cmu.edu/campaigns/apex-buggy -->
+        <img src="./assets/team photos/apex-team-photo.jpeg"
+          alt="Apex buggy team students smiling with their arms around each other. In front three women are sitting on top of three of their buggies"
+          class="team-photo">
+
 
       </div>
 
