added buggy 2023 photo

--- a/buggy.html
+++ b/buggy.html
@@ -340,6 +340,17 @@
           Leaderboard for Raceday 2023
         </p>
       </div>
+
+      <div class="leaderboard">
+        <!-- Image from Buggy Alumni Association. Image Credit: Bryan Arsham-->
+        <img src="./assets/buggy2023-groupphoto.jpg"
+          alt="Large group of students smiling. Some are standing and some are lying down on hay"
+          id="buggy-2023">
+        
+        <div class="times-by-division">
+          
+        </div>
+      </div>
     </div>
 
     <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
