Added leaderboard content

--- a/buggy.html
+++ b/buggy.html
@@ -347,10 +347,128 @@
           alt="Large group of students smiling. Some are standing and some are lying down on hay"
           id="buggy-2023">
         
+        <!-- Men's Races -->
         <div class="times-by-division">
-          
+          <p class="division-name">Men's Races</p>
+
+          <div class="display-rankings">
+            <p class="place-won">1st</p>
+            <p class="leaderboard-team-name">PiKA A</p>
+            <p class="display-time">2:09.39</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">2nd</p>
+            <p class="leaderboard-team-name">Spirit A</p>
+            <p class="display-time">2:11.49</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">3rd</p>
+            <p class="leaderboard-team-name">Apex A</p>
+            <p class="display-time">2:13.63</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">4th</p>
+            <p class="leaderboard-team-name">Spirit B</p>
+            <p class="display-time">2:16.59</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">5th</p>
+            <p class="leaderboard-team-name">Fringe B</p>
+            <p class="display-time">2:17.95</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">6th</p>
+            <p class="leaderboard-team-name">CIA C</p>
+            <p class="display-time">2:18.63</p>
+          </div>
         </div>
-      </div>
+
+        <!-- Women's Races -->
+        <div class="times-by-division">
+          <p class="division-name">Women's Races</p>
+
+          <div class="display-rankings">
+            <p class="place-won">1st</p>
+            <p class="leaderboard-team-name">Spirit A</p>
+            <p class="display-time">2:35.28</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">2nd</p>
+            <p class="leaderboard-team-name">CIA A</p>
+            <p class="display-time">2:36.43</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">3rd</p>
+            <p class="leaderboard-team-name">Fringe A</p>
+            <p class="display-time">2:40.15</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">4th</p>
+            <p class="leaderboard-team-name">PiKA A</p>
+            <p class="display-time">2:43.41</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">5th</p>
+            <p class="leaderboard-team-name">SigNu A</p>
+            <p class="display-time">2:46.89</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">6th</p>
+            <p class="leaderboard-team-name">Apex A</p>
+            <p class="display-time">2:46.92</p>
+          </div>
+        </div>
+
+        <!-- All Gender Races -->
+        <div class="times-by-division">
+          <p class="division-name">All Gender Races</p>
+
+          <div class="display-rankings">
+            <p class="place-won">1st</p>
+            <p class="leaderboard-team-name">Apex A</p>
+            <p class="display-time">2:35.28</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">2nd</p>
+            <p class="leaderboard-team-name">PiKA A</p>
+            <p class="display-time">2:36.43</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">3rd</p>
+            <p class="leaderboard-team-name">CIA A</p>
+            <p class="display-time">2:40.15</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">4th</p>
+            <p class="leaderboard-team-name">Spirit A</p>
+            <p class="display-time">2:43.41</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">5th</p>
+            <p class="leaderboard-team-name">Fringe A</p>
+            <p class="display-time">2:46.89</p>
+          </div>
+
+          <div class="display-rankings">
+            <p class="place-won">6th</p>
+            <p class="leaderboard-team-name">N/A</p>
+            <p class="display-time">Unavailable</p>
+          </div>
+        </div>
     </div>
 
     <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
